gap problem  fixed

--- a/resources/avatar-style.css
+++ b/resources/avatar-style.css
@@ -12,6 +12,7 @@
   overflow-x: hidden;
   padding-top: 55px;
   cursor: pointer;
+  width: 100%;
 }
 
 .avatar-div {
@@ -19,7 +20,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 2rem;
+  /* margin-right: 2rem; */
   margin-bottom: 3rem;
   text-align: center;
   padding-right: 2rem;
@@ -83,10 +84,12 @@
   }
 
   .said-section-mobile {
-    display: block;
+    display: flex;
+    align-self: center;
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0;
+    margin-right: 0;
+    /* border: 1px solid green; */
   }
 
   .avatar-div {
@@ -129,14 +132,18 @@
   }
 
   .carousel-button-div {
-    position: absolute;
+    position: relative;
     display: flex;
     justify-content: space-between;
+    align-self: center;
+    /* margin-left: -1rem; */
     align-items: center;
     left: 0;
     right: 0;
-    padding: 0 0.5rem;
-    width: 100%;
+    top: 7rem;
+    /* padding: 0 0.5rem; */
+    width: 110%;
     height: 30%;
+    /* border: 1px solid red; */
   }
 }
