--- a/resources/content1.css
+++ b/resources/content1.css
@@ -1,7 +1,7 @@
 .content-container {
     border: 1px solid black;
     margin: 0;
-    width: 100%;
+    
     
 }
 .first-section-image {
@@ -182,6 +182,8 @@ h3:before {
 }
 
 @media only screen and (max-width: 805px) {
+     
+   
 
     .first-section-image {
         flex-direction: column-reverse;
@@ -235,6 +237,8 @@ h3:before {
 
 
 @media only screen and (max-width:600px) {
+
+   
     .content-container {
         display: flex;
         flex-direction: column;
