--- a/resources/footer-style.css
+++ b/resources/footer-style.css
@@ -6,6 +6,9 @@ footer {
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 2rem 10rem;
+    margin-right: 0;
+
+
 }
 
 .head1, .head3 {
