--- a/resources/header-style.css
+++ b/resources/header-style.css
@@ -1,13 +1,20 @@
- html, body {
+*, *:before, *:after {
+    box-sizing: initial;
+}
+
+html, body {
    margin: 0;
    padding: 0;
+   width: 100%;
+   /* height: 100%; */
   overflow-x: hidden;
+  box-sizing: border-box;
 } 
 
 body {
     font-family: 'Be Vietnam Pro', sans-serif;
     width: 100%;
-    
+
     background-image: url(./images/bg-tablet-pattern.svg), url(./images/bg-tablet-pattern.svg);
     background-repeat: no-repeat;
     background-size: 50rem;
@@ -29,6 +36,10 @@ header {
     padding-right: 6rem;
     padding-bottom: 3rem;
     border: 1px solid red;
+    /* margin: 0;
+    padding: 0; */
+    
+  
 }
 nav {
     /* border: 1px solid black; */
